added menu on website , modified Css/Main and Css/Config

--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyWebsite</title>
+    <link rel="stylesheet" href="./Icon/css/all.min.css" />
     <link rel="stylesheet" href="./CSS/Main.css" type="text/css" />
   </head>
   <body>
-    <div class="wrapper"></div>
+    <!-- make website -->
+    <div class="wrapper">
+      <!-- make menu -->
+      <div class="menu">
+        <div class="separate"></div>
+        <nav>
+          <ul>
+            <li>
+              <a href="#"><span class="fas fa-home"></span> home</a>
+            </li>
+            <li>
+              <a href="#"><span class="fas fa-store"></span>store</a>
+            </li>
+            <li>
+              <a href="#"><span class="fas fa-book-reader"></span>about</a>
+            </li>
+            <li>
+              <a href="#"><span class="fas fa-newspaper"></span>news</a>
+            </li>
+            <li>
+              <a href="#"><span class="fas fa-photo-video"></span>gallery</a>
+            </li>
+            <li>
+              <a href="#"><span class="fas fa-headset"></span>support</a>
+            </li>
+            <li>
+              <a href="#"><span class="fas fa-phone"></span>contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- end make menu -->
+      <!-- make separator -->
+      <div class="separator"></div>
+      <!-- end make separator -->
+    </div>
+    <!-- end make website -->
   </body>
 </html>
