added intro section to website, resized background image and added css codes

--- a/Index.html
+++ b/Index.html
@@ -48,22 +48,96 @@
       <!-- make swiper -->
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="./Images/Artwork01.jpg" alt="ThiefArtwork"></div>
-          <div class="swiper-slide"><img src="./Images/Artwork02.jpg" alt="ThiefArtwork"></div>
-          <div class="swiper-slide"><img src="./Images/Artwork03.jpg" alt="ThiefArtwork"></div>
-          <div class="swiper-slide"><img src="./Images/Artwork04.jpg" alt="ThiefArtwork"></div>
-          <div class="swiper-slide"><img src="./Images/Artwork05.jpg" alt="ThiefArtwork"></div>
-          <div class="swiper-slide"><img src="./Images/Artwork06.jpg" alt="ThiefArtwork"></div>
-          <div class="swiper-slide"><img src="./Images/Artwork07.jpg" alt="ThiefArtwork"></div>
-          <div class="swiper-slide"><img src="./Images/Artwork08.jpg" alt="ThiefArtwork"></div>
-          <div class="swiper-slide"><img src="./Images/Artwork09.jpg" alt="ThiefArtwork"></div>
-          <div class="swiper-slide"><img src="./Images/Artwork10.jpg" alt="ThiefArtwork"></div>
+          <div class="swiper-slide">
+            <img src="./Images/Artwork01.jpg" alt="ThiefArtwork" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./Images/Artwork02.jpg" alt="ThiefArtwork" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./Images/Artwork03.jpg" alt="ThiefArtwork" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./Images/Artwork04.jpg" alt="ThiefArtwork" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./Images/Artwork05.jpg" alt="ThiefArtwork" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./Images/Artwork06.jpg" alt="ThiefArtwork" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./Images/Artwork07.jpg" alt="ThiefArtwork" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./Images/Artwork08.jpg" alt="ThiefArtwork" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./Images/Artwork09.jpg" alt="ThiefArtwork" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./Images/Artwork10.jpg" alt="ThiefArtwork" />
+          </div>
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
       </div>
       <!-- end make swiper -->
+      <!-- make separator -->
+      <div class="separator"></div>
+      <!-- end make separator -->
+      <!-- make intro -->
+      <div class="intro">
+        <div class="left">
+          <h1>what's yours is mine</h1>
+          <p>
+            Garrett, the Master Thief, steps out of the shadows into the City.
+            In this treacherous place, where the Baron's Watch spreads a rising
+            tide of fear and oppression, his skills are the only things he can
+            trust.
+          </p>
+          <p>
+            Even the most cautious citizens and their best-guarded possessions
+            are not safe from his reach. As an uprising emerges, Garrett finds
+            himself entangled in growing layers of conflict. Lead by Orion, the
+            voice of the people, the tyrannized citizens will do everything they
+            can to claim back the City from the Baron's grasp. The revolution is
+            inevitable. If Garrett doesn't get involved, the streets will run
+            red with blood and the City will tear itself apart.
+          </p>
+        </div>
+        <div class="middle"></div>
+        <div class="right">
+          <h1>buy now</h1>
+          <p>
+            Thief is available on PlayStation 4, Xbox One, PC and Mac. Buy now
+            on the following digital stores:
+          </p>
+          <ul>
+            <li>
+              <a
+                href="https://store.playstation.com/en-us/product/UP0082-CUSA00252_00-B000000000000261"
+                >PlayStation</a
+              >
+            </li>
+            <li>
+              <a href="https://www.xbox.com/games/store/thief/bnqcgr7bx08d"
+                >Xbox</a
+              >
+            </li>
+            <li>
+              <a href="https://store.steampowered.com/app/239160/Thief/"
+                >Steam</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- end make intro -->
+      <!-- make separator -->
+      <div class="separator"></div>
+      <!-- end make separator -->
     </div>
     <!-- end make website -->
     <!-- Swiper JS -->
