added product.css to project and added product section to website

--- a/Index.html
+++ b/Index.html
@@ -138,6 +138,78 @@
       <!-- make separator -->
       <div class="separator"></div>
       <!-- end make separator -->
+      <!-- make produc -->
+      <div class="product">
+        <div class="first">
+          <div class="left">
+            <h1>YOU ARE GARRETT, THE MASTER THIEF</h1>
+            <p>
+              Step into the silent shoes of Garrett, a dark and lonely thief
+              with an unrivalled set of skills. The most challenging heists, the
+              most inaccessible loots, the best kept secrets: nothing is out of
+              your reach.
+            </p>
+          </div>
+          <div class="right">
+            <div class="image">
+              <img src="./Images/SC01.jpg" alt="ScreenShot01" />
+            </div>
+          </div>
+        </div>
+        <div class="first rtl">
+          <div class="left">
+            <h1>THE CITY: YOURS FOR THE TAKING</h1>
+            <p>
+              Explore the sick and troubled City, from its shady back alleys to
+              the heights of its rooftops. Sneak into rich houses, Infiltrate
+              the best-guarded mansions and lurk in every dark corner… unnoticed
+              and unsanctioned.
+            </p>
+          </div>
+          <div class="right">
+            <div class="image">
+              <img src="./Images/SC02.jpg" alt="ScreenShot02" />
+            </div>
+          </div>
+        </div>
+        <div class="first">
+          <div class="left">
+            <h1>CHOOSE YOUR APPROACH</h1>
+            <p>
+              Leverage Garrett’s arsenal to take down guards with your
+              blackjack, shoot one of your many arrow types or use your newly
+              acquired focus abilities to manipulate the environment and
+              outsmart your enemies. What kind of master thief will you be?
+            </p>
+          </div>
+          <div class="right">
+            <div class="image">
+              <img src="./Images/SC03.jpg" alt="ScreenShot03" />
+            </div>
+          </div>
+        </div>
+        <div class="first rtl">
+          <div class="left">
+            <h1>UNPRECEDENTED IMMERSION</h1>
+            <p>
+              Become one with the world thanks to ground-breaking visual
+              elements and a truly tactile and visceral first-person experience.
+              Through jaw-dropping technical possibilities, Thief delivers
+              unprecedented immersion through sights, sounds and artificial
+              intelligence.
+            </p>
+          </div>
+          <div class="right">
+            <div class="image">
+              <img src="./Images/SC04.jpg" alt="ScreenShot04" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end make product -->
+      <!-- make separator -->
+      <div class="separator"></div>
+      <!-- end make separator -->
     </div>
     <!-- end make website -->
     <!-- Swiper JS -->
