added video to website

--- a/Index.html
+++ b/Index.html
@@ -210,6 +210,14 @@
       <!-- make separator -->
       <div class="separator"></div>
       <!-- end make separator -->
+      <!-- make video section -->
+      <div class="video">
+        <video src="./Video/Thief - Gameplay Trailer.mp4" controls poster="./Images/Poster.jpg"></video>
+      </div>
+      <!-- end make video section -->
+      <!-- make separator -->
+      <div class="separator"></div>
+      <!-- end make separator -->
     </div>
     <!-- end make website -->
     <!-- Swiper JS -->
