added gallery section to website

--- a/Index.html
+++ b/Index.html
@@ -176,7 +176,7 @@
           <div class="left">
             <h1>CHOOSE YOUR APPROACH</h1>
             <p>
-              Leverage Garrett’s arsenal to take down guards with your
+              Leverage Garrett's arsenal to take down guards with your
               blackjack, shoot one of your many arrow types or use your newly
               acquired focus abilities to manipulate the environment and
               outsmart your enemies. What kind of master thief will you be?
@@ -212,9 +212,49 @@
       <!-- end make separator -->
       <!-- make video section -->
       <div class="video">
-        <video src="./Video/Thief - Gameplay Trailer.mp4" controls poster="./Images/Poster.jpg"></video>
+        <p>
+          <video
+            src="./Video/Thief - Gameplay Trailer.mp4"
+            controls
+            poster="./Images/Poster.jpg"
+          ></video>
+          <a href="./Video/Thief - Gameplay Trailer.mp4" download=""
+            >Download</a
+          >
+        </p>
       </div>
       <!-- end make video section -->
+      <!-- make separator -->
+      <div class="separator"></div>
+      <!-- end make separator -->
+      <!-- make gallery -->
+      <div class="gallery">
+        <div class="photo">
+          <img src="./Images/Scrshot01.jpg" alt="theif" />
+          <a href="./Images/SC01.jpg" download="">Download</a>
+        </div>
+        <div class="photo">
+          <img src="./Images/Scrshot02.jpg" alt="theif" />
+          <a href="./Images/SC02.jpg" download="">Download</a>
+        </div>
+        <div class="photo">
+          <img src="./Images/Scrshot03.jpg" alt="theif" />
+          <a href="./Images/SC03.jpg" download="">Download</a>
+        </div>
+        <div class="photo">
+          <img src="./Images/Scrshot04.jpg" alt="theif" />
+          <a href="./Images/SC04.jpg" download="">Download</a>
+        </div>
+        <div class="photo">
+          <img src="./Images/Scrshot05.jpg" alt="theif" />
+          <a href="./Images/SC05.jpg" download="">Download</a>
+        </div>
+        <div class="photo">
+          <img src="./Images/Scrshot06.jpg" alt="theif" />
+          <a href="./Images/SC06.jpg" download="">Download</a>
+        </div>
+      </div>
+      <!-- end make gallery -->
       <!-- make separator -->
       <div class="separator"></div>
       <!-- end make separator -->
