added a contact section to website

--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,6 @@
     <div class="wrapper">
       <!-- make menu -->
       <div class="menu">
-        <div class="separate"></div>
         <nav>
           <ul>
             <li>
@@ -255,6 +254,32 @@
         </div>
       </div>
       <!-- end make gallery -->
+      <!-- make separator -->
+      <div class="separator"></div>
+      <!-- end make separator -->
+      <!-- make contact -->
+      <div class="contact">
+        <nav>
+          <ul>
+            <li>
+              <a href="#">term of service</a>
+            </li>
+            <li>
+              <a href="#">privacy notice</a>
+            </li>
+            <li>
+              <a href="#">playtest privacy notice</a>
+            </li>
+            <li>
+              <a href="#">accessibility statement</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- end make cantact -->
       <!-- make separator -->
       <div class="separator"></div>
       <!-- end make separator -->
