added social and design sections to website

--- a/Index.html
+++ b/Index.html
@@ -41,9 +41,9 @@
         </nav>
       </div>
       <!-- end make menu -->
-      <!-- make separator -->
-      <div class="separator"></div>
-      <!-- end make separator -->
+      <!-- make menu_separator -->
+      <div class="menu_separator"></div>
+      <!-- end make menu_separator -->
       <!-- make swiper -->
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
@@ -254,9 +254,6 @@
         </div>
       </div>
       <!-- end make gallery -->
-      <!-- make separator -->
-      <div class="separator"></div>
-      <!-- end make separator -->
       <!-- make contact -->
       <div class="contact">
         <nav>
@@ -280,8 +277,36 @@
         </nav>
       </div>
       <!-- end make cantact -->
+      <!-- make social -->
+      <div class="social">
+        <nav>
+          <ul>
+            <li>
+              <a href="https://www.linkedin.com/company/eidosmontreal/"><span class="fab fa-linkedin"></span> linkedIn</a>
+            </li>
+            <li>
+              <a href="https://twitter.com/EidosMontreal"><span class="fab fa-twitter-square"></span>twitter</a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/eidosmontreal/"
+                ><span class="fab fa-instagram-square"></span>instagram</a
+              >
+            </li>
+            <li>
+              <a href="https://www.facebook.com/EidosMontreal/"
+                ><span class="fab fa-facebook-square"></span>facebook</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- end make social -->
       <!-- make separator -->
-      <div class="separator"></div>
+      <div class="design">
+        <p>
+          <h2>this website made by: ali nouri bushehri <span class="far fa-copyright"></span> </h2>
+        </p>
+      </div>
       <!-- end make separator -->
     </div>
     <!-- end make website -->
