I changed file's name

--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyWebsite</title>
-    <link rel="stylesheet" href="./Icon/css/all.min.css" />
+    <link rel="stylesheet" href="./icon/css/all.min.css" />
     <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./CSS/Main.css" type="text/css" />
+    <link rel="stylesheet" href="./css/Main.css" type="text/css" />
   </head>
   <body>
     <!-- make website -->
@@ -48,34 +48,34 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="./Images/Artwork01.jpg" alt="ThiefArtwork" />
+            <img src="./images/Artwork01.jpg" alt="ThiefArtwork" />
           </div>
           <div class="swiper-slide">
-            <img src="./Images/Artwork02.jpg" alt="ThiefArtwork" />
+            <img src="./images/Artwork02.jpg" alt="ThiefArtwork" />
           </div>
           <div class="swiper-slide">
-            <img src="./Images/Artwork03.jpg" alt="ThiefArtwork" />
+            <img src="./images/Artwork03.jpg" alt="ThiefArtwork" />
           </div>
           <div class="swiper-slide">
-            <img src="./Images/Artwork04.jpg" alt="ThiefArtwork" />
+            <img src="./images/Artwork04.jpg" alt="ThiefArtwork" />
           </div>
           <div class="swiper-slide">
-            <img src="./Images/Artwork05.jpg" alt="ThiefArtwork" />
+            <img src="./images/Artwork05.jpg" alt="ThiefArtwork" />
           </div>
           <div class="swiper-slide">
-            <img src="./Images/Artwork06.jpg" alt="ThiefArtwork" />
+            <img src="./images/Artwork06.jpg" alt="ThiefArtwork" />
           </div>
           <div class="swiper-slide">
-            <img src="./Images/Artwork07.jpg" alt="ThiefArtwork" />
+            <img src="./images/Artwork07.jpg" alt="ThiefArtwork" />
           </div>
           <div class="swiper-slide">
-            <img src="./Images/Artwork08.jpg" alt="ThiefArtwork" />
+            <img src="./images/Artwork08.jpg" alt="ThiefArtwork" />
           </div>
           <div class="swiper-slide">
-            <img src="./Images/Artwork09.jpg" alt="ThiefArtwork" />
+            <img src="./images/Artwork09.jpg" alt="ThiefArtwork" />
           </div>
           <div class="swiper-slide">
-            <img src="./Images/Artwork10.jpg" alt="ThiefArtwork" />
+            <img src="./images/Artwork10.jpg" alt="ThiefArtwork" />
           </div>
         </div>
         <div class="swiper-button-next"></div>
@@ -151,7 +151,7 @@
           </div>
           <div class="right">
             <div class="image">
-              <img src="./Images/SC01.jpg" alt="ScreenShot01" />
+              <img src="./images/SC01.jpg" alt="ScreenShot01" />
             </div>
           </div>
         </div>
@@ -167,7 +167,7 @@
           </div>
           <div class="right">
             <div class="image">
-              <img src="./Images/SC02.jpg" alt="ScreenShot02" />
+              <img src="./images/SC02.jpg" alt="ScreenShot02" />
             </div>
           </div>
         </div>
@@ -183,7 +183,7 @@
           </div>
           <div class="right">
             <div class="image">
-              <img src="./Images/SC03.jpg" alt="ScreenShot03" />
+              <img src="./images/SC03.jpg" alt="ScreenShot03" />
             </div>
           </div>
         </div>
@@ -200,7 +200,7 @@
           </div>
           <div class="right">
             <div class="image">
-              <img src="./Images/SC04.jpg" alt="ScreenShot04" />
+              <img src="./images/SC04.jpg" alt="ScreenShot04" />
             </div>
           </div>
         </div>
@@ -213,11 +213,11 @@
       <div class="video">
         <p>
           <video
-            src="./Video/Thief - Gameplay Trailer.mp4"
+            src="./video/Thief - Gameplay Trailer.mp4"
             controls
-            poster="./Images/Poster.jpg"
+            poster="./images/Poster.jpg"
           ></video>
-          <a href="./Video/Thief - Gameplay Trailer.mp4" download=""
+          <a href="./video/Thief - Gameplay Trailer.mp4" download=""
             >Download</a
           >
         </p>
@@ -229,28 +229,28 @@
       <!-- make gallery -->
       <div class="gallery">
         <div class="photo">
-          <img src="./Images/Scrshot01.jpg" alt="theif" />
-          <a href="./Images/SC01.jpg" download="">Download</a>
+          <img src="./images/Scrshot01.jpg" alt="theif" />
+          <a href="./images/SC01.jpg" download="">Download</a>
         </div>
         <div class="photo">
-          <img src="./Images/Scrshot02.jpg" alt="theif" />
-          <a href="./Images/SC02.jpg" download="">Download</a>
+          <img src="./images/Scrshot02.jpg" alt="theif" />
+          <a href="./images/SC02.jpg" download="">Download</a>
         </div>
         <div class="photo">
-          <img src="./Images/Scrshot03.jpg" alt="theif" />
-          <a href="./Images/SC03.jpg" download="">Download</a>
+          <img src="./images/Scrshot03.jpg" alt="theif" />
+          <a href="./images/SC03.jpg" download="">Download</a>
         </div>
         <div class="photo">
-          <img src="./Images/Scrshot04.jpg" alt="theif" />
-          <a href="./Images/SC04.jpg" download="">Download</a>
+          <img src="./images/Scrshot04.jpg" alt="theif" />
+          <a href="./images/SC04.jpg" download="">Download</a>
         </div>
         <div class="photo">
-          <img src="./Images/Scrshot05.jpg" alt="theif" />
-          <a href="./Images/SC05.jpg" download="">Download</a>
+          <img src="./images/Scrshot05.jpg" alt="theif" />
+          <a href="./images/SC05.jpg" download="">Download</a>
         </div>
         <div class="photo">
-          <img src="./Images/Scrshot06.jpg" alt="theif" />
-          <a href="./Images/SC06.jpg" download="">Download</a>
+          <img src="./images/Scrshot06.jpg" alt="theif" />
+          <a href="./images/SC06.jpg" download="">Download</a>
         </div>
       </div>
       <!-- end make gallery -->
