--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       <!-- make separator -->
       <div class="design">
         <p>
-          <h2>this website made by: ali nouri bushehri <span class="far fa-copyright"></span> </h2>
+          <h2>this website designed by: ali nouri bushehri <span class="far fa-copyright"></span> </h2>
         </p>
       </div>
       <!-- end make separator -->
